--- a/facts/templates/facts/fact.html
+++ b/facts/templates/facts/fact.html
@@ -1,10 +1,8 @@
 {% extends 'facts/base.html' %}
 {% block content %}
     <div class="content">
-        <h3> {{ song }}</h3>
-        <h3> {{ artist }}</h3>
-        {% for fac in factSong %}
-            <p class="oneFact"> {{ fac.message }}</p>
+        {% for fac in object_list %}
+            <p class="oneFact"> {{ fac }}</p>
             {{ value|linebreaks }}
         {% endfor %}
     </div>
