--- a/facts/templates/facts/base.html
+++ b/facts/templates/facts/base.html
@@ -27,10 +27,11 @@
                     <a class="nav-link" href="#">Surprise</a>
                 </li>
             </ul>
-{#            <form class="form-inline my-2 my-lg-0" method="GET" action="{% url 'facts:search' %}">#}
+{#            <form class="form-inline my-2 my-lg-0" method="GET" action="{% url 'facts:search-result' %}">#}
 {#                <input class="form-control mr-sm-2"  type="search" name="search">#}
 {#                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>#}
 {#            </form>#}
+
         </div>
     </nav>
 {% endblock head %}
