search and slug

--- a/facts/templates/facts/add.html
+++ b/facts/templates/facts/add.html
@@ -1,6 +1,6 @@
 {% extends 'facts/base.html' %}
 {% block content %}
-    <form action="/showFact/" method="post">
+    <form action="" method="post">
         {% csrf_token %}
         {{ form }}
         <input type="submit" value="Submit">
